# mcp-agent-system

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  testkey.sh
chatbot/: dependency-reduced-pom.xml  pom.xml
chatbot/src/main/java/com/kirusa/: ChatClient.java
examples/: basic_agent.py  logging_demo.py
mcp_agent/: __init__.py  agent.py  config.py  install.sh  llogger.py  providers.py  requirements.txt
scripts/: __init__.py  agent_proxy.py  start_agent_proxy.py  start_mcp_server.py  start_user_service.py  start_whatsapp_bot.py
services/: __init__.py  mcp_server.py  memory.py  user_details.py  whatsapp.py
